refactor: 빈 장바구니 상품 검증